# fastapi-googlekeep-integration

./: README.md  pyproject.toml
app/: main.py
app/api/v1/: googlekeep.py
app/domain/models/: note.py
app/infrastructure/: googlekeep_repository.py
app/usecases/: create_note_usecase.py
