[tool.poetry]
name = "fastapi-googlekeep-integration"
version = "0.1.0"
description = ""
authors = ["yydevelop <yasudadevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.151.0"
gkeepapi = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
